--- a/appstate.json
+++ b/appstate.json
@@ -1,7 +1,128 @@
-....
-
-
-        𝐚dd 𝐲𝐨𝐮𝐫 𝐜𝟑𝐜 𝐅𝐛𝐬𝐭𝐚𝐭𝐞 𝐜𝐨𝐨𝐤𝐢𝐞 🍪
-
-
-.....
+[
+    {
+        "key": "dbln",
+        "value": "%7B%2261576110512896%22%3A%22bpN0gbWa%22%2C%2261577660445795%22%3A%22U2nZGsr8%22%2C%2261577836988734%22%3A%222dnlXEjO%22%2C%2261578220550677%22%3A%22g76jmzmW%22%2C%2261577861709237%22%3A%22RHnTFxd1%22%7D",
+        "domain": "facebook.com",
+        "path": "/login/device-based/",
+        "hostOnly": false,
+        "creation": "2025-07-04T05:52:50.964Z",
+        "lastAccessed": "2025-07-04T05:52:50.964Z"
+    },
+    {
+        "key": "datr",
+        "value": "py9kaEdnKSPwuyj7UK2vA5WW",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-07-04T05:52:50.964Z",
+        "lastAccessed": "2025-07-04T05:52:50.964Z"
+    },
+    {
+        "key": "sb",
+        "value": "py9kaAZS8v3klMEvLIc5FxN4",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-07-04T05:52:50.964Z",
+        "lastAccessed": "2025-07-04T05:52:50.964Z"
+    },
+    {
+        "key": "vpd",
+        "value": "v1%3B950x501x2.15625",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-07-04T05:52:50.964Z",
+        "lastAccessed": "2025-07-04T05:52:50.964Z"
+    },
+    {
+        "key": "ps_l",
+        "value": "1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-07-04T05:52:50.964Z",
+        "lastAccessed": "2025-07-04T05:52:50.964Z"
+    },
+    {
+        "key": "ps_n",
+        "value": "1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-07-04T05:52:50.964Z",
+        "lastAccessed": "2025-07-04T05:52:50.964Z"
+    },
+    {
+        "key": "dpr",
+        "value": "2.15625",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-07-04T05:52:50.964Z",
+        "lastAccessed": "2025-07-04T05:52:50.964Z"
+    },
+    {
+        "key": "locale",
+        "value": "bn_IN",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-07-04T05:52:50.964Z",
+        "lastAccessed": "2025-07-04T05:52:50.964Z"
+    },
+    {
+        "key": "pas",
+        "value": "61576110512896%3Aj6CiC4KJgJ%2C61577660445795%3AS18uBppuW0%2C61577836988734%3Ahtw5oUNbzD%2C61578220550677%3A5DyQvBx8Pb%2C61577861709237%3AD2BLgk92m2",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-07-04T05:52:50.964Z",
+        "lastAccessed": "2025-07-04T05:52:50.964Z"
+    },
+    {
+        "key": "c_user",
+        "value": "61577660445795",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-07-04T05:52:50.964Z",
+        "lastAccessed": "2025-07-04T05:52:50.964Z"
+    },
+    {
+        "key": "xs",
+        "value": "18%3AXk6rb7xkeBgGkQ%3A2%3A1751574838%3A-1%3A-1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-07-04T05:52:50.964Z",
+        "lastAccessed": "2025-07-04T05:52:50.964Z"
+    },
+    {
+        "key": "fr",
+        "value": "0Zh0Ly76h6wLWo9fX.AWdDrLofc1ku87Ysd_WmYry3KiEwBEWhwC5Jix1YeiyRwYeHs8Y.BoZC-n..AAA.0.0.BoZ2jJ.AWddYClrkK1SfeU5YJXxYpScBZA",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-07-04T05:52:50.964Z",
+        "lastAccessed": "2025-07-04T05:52:50.964Z"
+    },
+    {
+        "key": "fbl_st",
+        "value": "101730538%3BT%3A29193458",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-07-04T05:52:50.964Z",
+        "lastAccessed": "2025-07-04T05:52:50.964Z"
+    },
+    {
+        "key": "wl_cbv",
+        "value": "v2%3Bclient_version%3A2859%3Btimestamp%3A1751607497",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-07-04T05:52:50.964Z",
+        "lastAccessed": "2025-07-04T05:52:50.964Z"
+    }
+]
